After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 754901 - Titles are not set when setting from CDDB results
Titles are not set when setting from CDDB results
Status: RESOLVED FIXED
Product: easytag
Classification: Other
Component: general
2.4.x
Other All
: Normal normal
: 2.2
Assigned To: EasyTAG maintainer(s)
EasyTAG maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2015-09-11 19:00 UTC by AB
Modified: 2015-11-29 18:35 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Patch that fix issue with cddb dialog (1.99 KB, patch)
2015-11-22 18:36 UTC, Dennis Björklund
committed Details | Review

Description AB 2015-09-11 19:00:49 UTC
Everything else is set
Comment 1 AB 2015-09-11 19:02:51 UTC
Instead, the filename is set to the given title
Comment 2 AB 2015-09-29 17:54:40 UTC
Same happens when bulk editing, track title is not changed
Comment 3 AB 2015-09-29 17:59:23 UTC
Not true, that was the old regexp issue
Comment 4 adomol 2015-11-07 21:13:57 UTC
Has this issue been addressed yet? I'm having the same problem. Everything seemed to be working fine when I first upgraded to the latest easytag (2.4.0-2) back on 9/1. But just last night I accidentally unchecked the title tag in the CDDB window and when I went back to check the box, the titles were still not automatically being populated. I tried restarting, reinstalling, deleting easytag .cache and .config all had no effect on the problem... titles would not be populated from a CDDB search. Only manually inputting the titles would work. I had to downgrade to 2.2.6-1 which works fine.
Comment 5 Dennis Björklund 2015-11-22 18:36:58 UTC
Created attachment 316052 [details] [review]
Patch that fix issue with cddb dialog
Comment 6 Dennis Björklund 2015-11-22 18:38:49 UTC
The et_settings_flags_toggle_set() function used by both scan dialog and cddb dialog uses the "process-fields" setting. For the cddb dialog it should use the "cddb-set-fields" setting.

I've attached a patch.
Comment 7 AB 2015-11-22 20:48:45 UTC
I can confirm that the patch fixes it.
Comment 8 David King 2015-11-29 18:34:53 UTC
Review of attachment 316052 [details] [review]:

Thanks for the patch. I pushed it to master as commit bbf918f8427950734d0101ef2744fff57eaa4b7b.