Fix selection of CDDB fields to fill

https://bugzilla.gnome.org/show_bug.cgi?id=754901